[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
flate2 = "1.0.35"
ssh2 = "0.9.4"
tar = "0.4.43"
cloudflare-ssh = { path = "/home/deepwater/code/cloudflare-ssh/" }
reqwest = { version = "0.12.12", features = ["blocking"] }
port_check = "0.2.1"
